@@ -1,3 +1,7 @@
+2010-09-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Corrected handling of empty files (avoid PHP warnings)
+
 2010-04-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Changed service to use new connector base class
